Updated documentation, need fix orderBy and the rest of the API that isn't build.
